# Awaaz

./: .env.example  .gitignore  AGENTS.md  README.md  overlay.html  package-lock.json  package.json  panel.html  vite.config.ts
src/: overlay.tsx  panel.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: awaaz-cursor.cur
src-tauri/src/: hotkey.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: action.rs  agent.rs  context.rs  cursor.rs  mod.rs  monitor.rs  screen.rs  window.rs
src/hooks/: useAppStateBridge.ts  useAssemblyAIStreaming.ts  useClaudeSSE.ts  useCursorPosition.ts  useDeepgramStream.ts  useMicrophone.ts  usePointParser.ts  useTTSPlayer.ts  useVoiceController.ts
src/lib/: actionParser.test.ts  actionParser.ts  agentExecutor.test.ts  agentExecutor.ts  agentObservation.ts  agentPlan.test.ts  agentPlan.ts  appEvents.ts  audioLevel.ts  coachSession.test.ts  coachSession.ts  monitorMapping.test.ts  monitorMapping.ts  pcmAudio.test.ts  pcmAudio.ts  pointParser.test.ts  pointParser.ts  sentenceDetector.test.ts  sentenceDetector.ts  workerClient.ts
src/store/: agentSessionStore.ts  appStore.ts
src/windows/overlay/: AudioWaveform.tsx  BlueCursor.tsx  Overlay.tsx  PointerAnimation.tsx  ResponseBubble.tsx  overlay.css
src/windows/panel/: ConversationHistory.tsx  ModelPicker.tsx  Panel.tsx  PushToTalkButton.tsx  SettingsPanel.tsx  panel.css
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
